<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Avi</string>
    <string name="STRID_FUNC_FADER">Fader</string>
    <string name="STRID_CMN_SAVE2">Save</string>
    <string name="STRID_CAU_INVALID_OPERATION_NGFILE_ML">Operation cannot be executed in\nunsupported files.</string>
    <string name="STRID_FUNC_FADER_GUIDE_OFF2">Fader function is disabled.</string>
    <string name="STRID_AMC_STR_00947">Still Images</string>
    <string name="STRID_AMC_STR_00962">Night Scene</string>
    <string name="STRID_AMC_STR_01013">RAW</string>
    <string name="STRID_AMC_STR_01014">RAW &amp; JPEG</string>
    <string name="STRID_AMC_STR_01015">Fine</string>
    <string name="STRID_AMC_STR_01016">Standard</string>
    <string name="STRID_AMC_STR_01036">Custom</string>
    <string name="STRID_AMC_STR_01062">On</string>
    <string name="STRID_AMC_STR_01117">Reset</string>
    <string name="STRID_AMC_STR_01187">Delete this image?</string>
    <string name="STRID_AMC_STR_01355">Selects the aspect ratio for still images.</string>
    <string name="STRID_AMC_STR_01358">Sets the images quality for still images.</string>
    <string name="STRID_AMC_STR_01363">Selects the size of still images.</string>
    <string name="STRID_AMC_STR_01364">Shoots at L (maximum) size.</string>
    <string name="STRID_AMC_STR_01365">Shoots at M (medium) size.</string>
    <string name="STRID_AMC_STR_01366">Shoots at S (minimum) size.</string>
    <string name="STRID_AMC_STR_01911">No memory card inserted.</string>
    <string name="STRID_AMC_STR_00058">Off</string>
    <string name="STRID_AMC_STR_01356">Shoots an image with a width to height ratio of 3:2. Suitable for ordinary prints.</string>
    <string name="STRID_AMC_STR_01357">Shoots an image with a width to height ratio of 16:9. Suitable for viewing on a widescreen TV.</string>
    <string name="STRID_AMC_STR_01359">Requires special software to develop.\nDeterioration is reduced and quality adjustable. Printable after processing.</string>
    <string name="STRID_AMC_STR_01360">Records both RAW file which requires development processing and JPEG image. JPEG image is fixed to fine.</string>
    <string name="STRID_AMC_STR_01361">Records JPEG images of fine quality.\nRecords beautiful images with little deterioration.</string>
    <string name="STRID_AMC_STR_01362">Records JPEG images of standard quality. Allows more images to be stored on a memory card.</string>
    <string name="STRID_AMC_STR_01869">Self-timer</string>
    <string name="STRID_AMC_STR_02150">Self-timer: 2 Sec</string>
    <string name="STRID_AMC_STR_06108" formatted="false">%2d:%02d:%02d</string>
    <string name="STRID_AMC_STR_06826">Miniature</string>
    <string name="STRID_FUNC_EZEDIT_RESIZE_L">L</string>
    <string name="STRID_FUNC_EZEDIT_RESIZE_M">M</string>
    <string name="STRID_FUNC_EZEDIT_RESIZE_S">S</string>
    <string name="STRID_CAU_CHANGE_DIAL_TO_PASM">Unavailable in this shooting mode.\nSwitch to any of P/A/S/M modes.</string>
    <string name="STRID_CAU_WILL_CHANGE_TO_P">Unavailable in this shooting mode.\nSwitches to P mode automatically in this application.</string>
    <string name="STRID_FUNC_TIMELAPSE">Time-lapse</string>
    <string name="STRID_FUNC_TIMELAPSE_GUIDE">Continuously shoots still images at a selected interval to rapidly display the passage of time in a scene. You can select a theme to easily preset parameters.</string>
    <string name="STRID_FUNC_TIMELAPSE_THEME">Theme Selection</string>
    <string name="STRID_FUNC_TIMELAPSE_TCLOUD">Cloudy Sky</string>
    <string name="STRID_FUNC_TIMELAPSE_TSTAR">Night Sky</string>
    <string name="STRID_FUNC_TIMELAPSE_TSUNRISE">Sunrise</string>
    <string name="STRID_FUNC_TIMELAPSE_TSUNSET">Sunset</string>
    <string name="STRID_FUNC_TIMELAPSE_TCLOUD_GUIDE">Shoots a scene of dynamically flowing clouds.</string>
    <string name="STRID_FUNC_TIMELAPSE_TSTAR_GUIDE">Shoots the movement of stars.\nEffective for shooting from a dark place where stars can be well seen in the sky.</string>
    <string name="STRID_FUNC_TIMELAPSE_TNIGHTCITY_GUIDE">Shoots the lights of the city at night, including the lights of cars moving on the streets and the movement of people.</string>
    <string name="STRID_FUNC_TIMELAPSE_TSUNRISE_GUIDE">Shoots the brightness of the rising sun and the dramatic color changes of this scene.</string>
    <string name="STRID_FUNC_TIMELAPSE_TSUNSET_GUIDE">Shoots the brightness of the setting sun and the dramatic color changes of this scene.</string>
    <string name="STRID_FUNC_TIMELAPSE_TMINIATURE_GUIDE">Uses the miniature effect to shoot people and cars rhythmically.\nEffective with compositions like looking down on a city street from a high place.</string>
    <string name="STRID_FUNC_TIMELAPSE_TAUTO_GUIDE">Shoots with standard settings.</string>
    <string name="STRID_FUNC_TIMELAPSE_TCUSTOM_GUIDE">Sets such items as the aperture and shutter speed and shoots.\n[Shoot Mode]: P/A/S/M</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL">Interval</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_VALUE">%2dsec</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_GUIDE">Automatically shoots at a set interval.</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM">Shots</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM_VALUE">%3d</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGENUM_GUIDE">Automatically shoots a set number of shots.</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI24">Movie 24p</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI30">Movie 30p</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_JPEG_GUIDE">Records as still image.</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI24_GUIDE">Records as a 24-frame/sec movie (AVI).</string>
    <string name="STRID_FUNC_TIMELAPSE_RECMODE_AVI30_GUIDE">Records as a 30-frame/sec movie (AVI).</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE">Movie Size</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1920_1080">1920x1080</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1280_720">1280x720</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1920_1080_GUIDE">Records as 1920x1080 size.</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVSIZE_1280_720_GUIDE">Records as 1280x720 size.</string>
    <string name="STRID_FUNC_TIMELAPSE_RECTIME">Duration</string>
    <string name="STRID_FUNC_TIMELAPSE_CNF_1">Remaining card capacity may not\nlet you shoot the selected duration.\nCard space: %3d shots</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_THEME">Invalid with the current theme.</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_RECMODE">Invalid with the current file format.</string>
    <string name="STRID_FUNC_INV_APP">Invalid with this application.</string>
    <string name="STRID_FUNC_TIMELAPSE_IMAGEVIEW">Time-lapse Image List</string>
    <string name="STRID_FUNC_TIMELAPSE_NOIMAGES">There are no images that were shot\nwith this application.</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_IMAGES">There are no images that can be\nplayed back.</string>
    <string name="STRID_FUNC_TIMELAPSE_REMAIN_TIME">Time Left</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_MGRFILE_1">Due to an image database file error,\nsome images cannot be displayed.</string>
    <string name="STRID_FUNC_TIMELAPSE_INV_MGRFILE_2">Due to an image database file error,\nan image cannot be displayed.</string>
    <string name="STRID_CAU_SHOOTING_ERROR_RETRY">Failed to shoot.\nShoot again.</string>
    <string name="STRID_FUNC_TIMELAPSE_2L">Time-lapse</string>
    <string name="STRID_CAU_CONTENTS_FULL_PLS_DELETE">Total number of content in this\napplication has reached limit.\nRemove some content from this\napplication.</string>
    <string name="STRID_FUNC_TIMELAPSE_AEL_ON_GUIDE">Fixes to the exposure at the start of shooting.</string>
    <string name="STRID_FUNC_TIMELAPSE_STD">Time-lapse LE</string>
    <string name="STRID_FUNC_TIMELAPSE_STD_2L">Time-lapse\nLE</string>
    <string name="STRID_FUNC_TIMELAPSE_AE">AE</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_GUIDE">Sets AE.</string>
    <string name="STRID_FUNC_TIMELAPSE_AEL">Lock(AEL)</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING">Tracking</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_GUIDE">Tracks the exposure to the change in brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_HI">Tracking Sens.: High</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_HI_GUIDE">Tracks the exposure faster to the change in brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_MID">Tracking Sens.: Mid</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_MID_GUIDE">Quickly tracks the exposure to the change in brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_LOW">Tracking Sens.: Low</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_LOW_GUIDE">Slowly tracks the exposure to the change in brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_PRIORITY">Interval Priority</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_PRIORITY_GUIDE">Sets the shooting interval priority.</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_PRIORITY_ON_GUIDE">Shoots in the interval of the shutter speed when the shutter speed is longer than the set shooting interval.</string>
    <string name="STRID_FUNC_TIMELAPSE_INTERVAL_PRIORITY_OFF_GUIDE">Shoots in the set shooting interval.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_GUIDE">Changes the self-timer setting.</string>
    <string name="STRID_FUNC_TIMELAPSE_MOVIESIZE_GUIDE">Selects the movie size.</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_2S_GUIDE">Shoots 2 seconds after pressing the shutter button.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_GUIDE_S">Tracks the exposure to the brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_HI_GUIDE_S">Tracks exposure faster to the brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_MID_GUIDE_S">Quickly tracks exposure to brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_AE_TRACKING_LOW_GUIDE_S">Slowly tracks exposure to brightness.</string>
    <string name="STRID_FUNC_TIMELAPSE_SETTING_RESET_GUIDE">Resets setting value.</string>
    <string name="STRID_FUNC_TIMELAPSE_FILE_FORMAT">File Format</string>
    <string name="STRID_FUNC_TIMELAPSE_SELFTIMER_OFF_GUIDE">Will not use self-timer.</string>
    <string name="STRID_FUNC_TIMELAPSE_AEL_ON_GUIDE2">Fixes to the exposure at the start of shooting.</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP">Option Exit App.</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_EXITAPP_SK">Option Exit App.</string>
    <string name="STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE">Enter Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE_SK">Enter Guide Cancel</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE_PAUSE">Pause</string>
    <string name="STRID_FUNC_TIMELAPSE_PB_FOOTER_GUIDE_PAUSE_SK">Pause</string>
    <string name="STRID_FUNC_TIMELAPSE_GUIDE2">Continuously shoots still images at a selected interval to rapidly display the passage of time in a scene.</string>
    <string name="STRID_FUNC_TIMELAPSE_FOOTERGUIDE_OPTION_RETURN">Option </string>
    <string name="STRID_FOOTERGUIDE_ENTER_RETURN">Enter </string>
    <string name="STRID_FOOTERGUIDE_ENTER_RETURN_SK">Enter </string>
    <string name="STRID_FUNC_TIMELAPSE_EFFECT_START_FRAME">Start Frame</string>
    <string name="STRID_FUNC_TIMELAPSE_EFFECT_END_FRAME">End Frame</string>
    <string name="STRID_FUNC_TIMELAPSE_EFFECT_FRAME_SELECTION">Frame Selection</string>
    <string name="STRID_FUNC_TIMELAPSE_MIN_SEC" formatted="false">%sm%02ds</string>
</resources>