<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:background="0x10809c3"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/header"
        android:background="@android:drawable/list_longpressed_holo_dark"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"/>
    <com.sony.imaging.app.base.shooting.widget.AppIconView
        android:id="@+id/app_icon"
        android:layout_width="70px"
        android:layout_height="55px"
        android:layout_marginLeft="6px"
        android:layout_marginTop="0px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/theme_name"
        android:layout_width="422px"
        android:layout_height="46px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_TIMELAPSE_EFFECT_FRAME_SELECTION"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/start_button"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="300px"
        android:layout_height="56px"
        android:layout_marginLeft="170px"
        android:layout_marginTop="160px"
        android:text=""
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <com.sony.imaging.app.timelapse.shooting.widget.TimelapseImageView
        android:id="@+id/start_flag"
        android:background="@drawable/p_16_dd_parts_tm_start_square_button"
        android:layout_width="40px"
        android:layout_height="40px"
        android:layout_marginLeft="184px"
        android:layout_marginTop="168px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/start_text"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="228px"
        android:layout_height="46px"
        android:layout_marginLeft="228px"
        android:layout_marginTop="165px"
        android:text="@string/STRID_FUNC_TIMELAPSE_EFFECT_START_FRAME"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:gravity="center"
        android:id="@+id/end_button"
        android:background="@drawable/bt_x_56"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="300px"
        android:layout_height="56px"
        android:layout_marginLeft="170px"
        android:layout_marginTop="264px"
        android:text=""
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <com.sony.imaging.app.timelapse.shooting.widget.TimelapseImageView
        android:id="@+id/end_flag"
        android:background="@drawable/p_16_dd_parts_tm_end_square_button"
        android:layout_width="40px"
        android:layout_height="40px"
        android:layout_marginLeft="184px"
        android:layout_marginTop="272px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/end_text"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_width="228px"
        android:layout_height="46px"
        android:layout_marginLeft="228px"
        android:layout_marginTop="269px"
        android:text="@string/STRID_FUNC_TIMELAPSE_EFFECT_END_FRAME"
        style="@style/RESID_FONTSIZE_BIG_L_EDGE_OFF"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:guide_text_style="@attr/menu_footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="10px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FOOTERGUIDE_ENTER_RETURN"
        base:guide_text_emt="@string/STRID_FOOTERGUIDE_ENTER_RETURN_SK"/>
</RelativeLayout>
