<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:base="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/header"
        android:background="@android:drawable/list_longpressed_holo_dark"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="0px"/>
    <com.sony.imaging.app.base.shooting.widget.AppIconView
        android:id="@+id/app_icon"
        android:layout_width="70px"
        android:layout_height="55px"
        android:layout_marginLeft="6px"
        android:layout_marginTop="0px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_NORMAL"
        android:id="@+id/theme_name"
        android:layout_width="422px"
        android:layout_height="46px"
        android:layout_marginLeft="80px"
        android:layout_marginTop="4px"
        android:text="@string/STRID_FUNC_TIMELAPSE_EFFECT_START_FRAME"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <ImageView
        android:id="@+id/cropping_frame_lower"
        android:background="@drawable/p_16_dd_parts_tm_end_crop_frame_disable"
        android:layout_width="192px"
        android:layout_height="108px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="100px"/>
    <ImageView
        android:id="@+id/cropping_frame_upper"
        android:background="@drawable/p_16_dd_parts_tm_start_crop_frame_disable"
        android:layout_width="192px"
        android:layout_height="108px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="100px"/>
    <TextView
        android:textColor="@color/RESID_FONTSTYLE_STD_FOCUSED"
        android:gravity="center"
        android:id="@+id/crop_toggle"
        android:layout_width="228px"
        android:layout_height="46px"
        android:layout_marginLeft="206px"
        android:layout_marginTop="119px"
        android:text="@null"
        style="@style/RESID_FONTSIZE_BIG_M_EDGE_ON"/>
    <com.sony.imaging.app.base.common.widget.FooterGuide
        android:id="@+id/footer_guide_theme_option"
        android:background="0x1080a15"
        android:layout_width="640px"
        android:layout_height="60px"
        android:layout_marginLeft="0px"
        android:layout_marginTop="420px"
        base:group="footer"
        base:guide_text_style="@attr/footer_guide"
        base:guide_text_marginLeft="8px"
        base:guide_text_marginTop="10px"
        base:guide_text_width="624px"
        base:guide_text_height="40px"
        base:guide_text_p1="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE"
        base:guide_text_emt="@string/STRID_FUNC_TIMELAPSE_OPT_FOOTER_GUIDE_SK"/>
</RelativeLayout>
